k8s/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: student-j-donnerbauer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: student.cloud.htl-leonding.ac.at
    http:
      paths:
        - path: /j.donnerbauer/keycloak(.*)$
          pathType: Prefix
          backend:
            service:
              name: keycloak-service
              port:
                number: 80
